<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl"
    android:background="@color/SortOfwhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/PostYourQ"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/AIblue"
        android:gravity="center"
        android:text="Write and post your questions"
        android:textSize="18sp"

        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/Add_post"
        android:layout_width="305dp"
        android:layout_height="171dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="top"
        android:hint="Write your question..."
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/Post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PostYourQ"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/Post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="onClickPost"
        android:background="@drawable/button_borders"
        android:text="Post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/CourseChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/button_borders"
        android:onClick="onClickChoose"
        android:text="Course"
        app:layout_constraintBottom_toTopOf="@+id/Post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_post"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/Viewer"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toEndOf="@+id/CourseChoice"
        app:layout_constraintTop_toBottomOf="@+id/Add_post"
        app:layout_constraintVertical_bias="0.158" />




</androidx.constraintlayout.widget.ConstraintLayout>