<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/SortOfwhite"
    android:id="@+id/homeid"
    android:layout_height="match_parent">
    <include layout="@layout/apt_toolbar"
        android:id="@+id/apt_lid"/>

<!--    <TextView-->
<!--        android:id="@+id/WelcomeHomeTv"-->
...
